--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
+    "code-inspector-plugin": "^1.0.2",
     "vite": "^7.0.4"
   }
 }
